--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <h1><span style="color: rgb(25, 52, 78);"> Contact Details:- </span></h1>
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6628.614533272909!2d73.01460572904156!3d26.208081613630796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x329c2400df031cd2!2sIRCDR%20STATION%20ISTRAC%20ISRO%20OFFICE!5e0!3m2!1sen!2sin!4v1622272895917!5m2!1sen!2sin" width="1510" height="300" style="border: 1px;" allowfullscreen="" loading="lazy"></iframe>
-             <!--width="1510" height="300" frameborder="1px" style="border:0;" allowfullscreen=""></iframe>-->
+             <!--width="100%" height="300" frameborder="1px" style="border:0;" allowfullscreen=""></iframe>-->
             </div>
              <div id="contact-method">
             <h2 style="color: rgb(25, 52, 78);">Email ID:</h2>
@@ -20,7 +20,7 @@
             </div>
             <div ><h2 style="color: rgb(25, 52, 78);"> Web :</h2></div>
                 
-                <div > isrotech.com </div>
+                <div > isrospace.com </div>
             </div>	
             <div id="contact-method">
              <h3 style="color: rgb(25, 52, 78);">Do support us on Social Media:</h3>
